--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -58,6 +58,7 @@
     .heroButtonContainer {
       display: flex;
       justify-content: space-between;
+      align-items: center;
       width: 60%;
       height: 10%;
       @media screen and (max-width: 1224px) {
@@ -69,12 +70,20 @@
         border-radius: 20px;
         border: transparent;
         width: 100%;
+        height: 5vh;
         margin: 0 5% 0 0;
         cursor: pointer;
       }
     }
   }
   .maxImage {
+    .carousel-root {
+      display: none !important;
+      .carousel-status,
+      .control-dots {
+        display: none !important;
+      }
+    }
     height: 100%;
     width: 40%;
     // background-image: url("/max.jpg");
