--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -183,6 +183,7 @@
     }
   }
 }
+
 .section4 {
   height: 90vh;
   width: 100%;
@@ -237,6 +238,7 @@
     }
   }
 }
+
 .section5 {
   height: 40vh;
   width: 100%;
@@ -299,6 +301,7 @@
     }
   }
 }
+
 .section6 {
   height: 90vh;
   width: 100%;
@@ -423,4 +426,10 @@
       }
     }
   }
+}
+
+.section7 {
+  height: 60vh;
+  width: 100%;
+  background-color: #171717;
 }
