--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -35,6 +35,7 @@
 
     @media screen and (max-width: 1224px) {
       width: 100vw;
+      height: 55vh;
     }
     h1 {
       margin: 0;
@@ -57,12 +58,20 @@
     }
     .heroButtonContainer {
       display: flex;
+      flex-direction: column;
       justify-content: space-between;
       align-items: center;
-      width: 60%;
-      height: 10%;
+      width: 90%;
+      height: 20vh;
+      padding: 5% 0;
       @media screen and (max-width: 1224px) {
-        width: 95vw;
+        width: 100%;
+        height: 15vh;
+        justify-content: center;
+        align-items: center;
+      }
+      div {
+        font-size: 2em;
       }
       button {
         background-color: #e1dcca;
@@ -70,8 +79,8 @@
         border-radius: 20px;
         border: transparent;
         width: 100%;
-        height: 5vh;
-        margin: 0 5% 0 0;
+        height: 15vh;
+        // margin: 0 0% 5% 0;
         cursor: pointer;
       }
     }
