--- a/styles/Component.module.scss
+++ b/styles/Component.module.scss
@@ -68,7 +68,7 @@
     right: 0;
     margin: 0;
     padding: 0;
-    background-image: linear-gradient(to bottom, #093a3a, #000);
+    background-image: linear-gradient(to bottom, #09183a, #000);
 
     overflow: hidden;
     color: #ca267b;
@@ -123,7 +123,7 @@
   }
   .line {
     height: 10%;
-    background-color: #1d3c3d;
+    background-color: #09183a;
     width: 20%;
     margin: 1% 0;
     border-radius: 10px 0px 0px 10px;
@@ -156,7 +156,7 @@
     .tagline {
       height: 10%;
       min-width: 20%;
-      background-color: #1d3c3d;
+      background-color: #09183a;
       border-radius: 10px;
       display: flex;
       justify-content: center;
