--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -19,7 +19,7 @@
 .section1 {
   height: 100vh;
   width: 100%;
-  background-image: linear-gradient(to bottom, #093a3a, #000);
+  background-image: linear-gradient(to bottom, #09183a, #000);
   display: flex;
 
   @media screen and (max-width: 1224px) {
@@ -107,7 +107,8 @@
   padding: 10% 5%;
   h1 {
     margin: 0;
-    color: #1d3c3d;
+    font-size: 3em;
+    color: #09183a;
     @media screen and (max-width: 1224px) {
       font-size: 1.5em;
       text-align: center;
@@ -116,7 +117,7 @@
   .cardContainer {
     height: 90%;
     width: 100%;
-    // background-color: #e1dcca;
+    background-color: #e1dcca;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -128,7 +129,8 @@
 
 .section3 {
   height: 90vh;
-  width: 100%;
+  width: 100vw;
+  overflow: hidden;
   background-image: url("/Background.jpg");
   background-size: contain;
   display: flex;
@@ -164,10 +166,21 @@
       width: 100vw;
       padding: 5% 5%;
     }
+    .pButton {
+      background-color: #09183a;
+      height: 10%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 10px;
+      color: #f1f1f1;
+      cursor: pointer;
+    }
     h1 {
       width: 100%;
       font-size: 3em;
       margin: 0;
+      color: #09183a;
       @media screen and (max-width: 1224px) {
         font-size: 2em;
         width: 100%;
@@ -242,7 +255,7 @@
 .section5 {
   height: 40vh;
   width: 100%;
-  background-image: linear-gradient(to bottom, #093a3a, #000);
+  background-image: linear-gradient(to bottom, #09183a, #000);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -411,7 +424,7 @@
         text-indent: 20px;
         border-radius: 10px;
         height: 20%;
-        background-color: #093a3a;
+        background-color: #09183a;
         outline: none;
         color: #093a3a;
       }
