--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -300,15 +300,15 @@
     }
   }
   .donateImg {
-    height: 15%;
-    width: 25%;
+    height: 15vh;
+    width: 25vw;
     display: flex;
     justify-content: center;
     align-items: center;
     @media screen and (max-width: 1224px) {
       width: 100%;
     }
-    img {
+    .imgWH {
       width: 80%;
       // height: 100%;
       border-radius: 10px;
