--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -140,22 +140,22 @@
   height: 100vh;
   width: 100vw;
   overflow: hidden;
-  background-image: url("/Background.jpg");
+  // background-image: url("/Background.jpg");
   background-size: contain;
   display: flex;
+  background-color: #bebebe;
   @media screen and (max-width: 1224px) {
     flex-direction: column-reverse;
     height: 100vh;
   }
 
   .aboutContainer {
-    opacity: 0;
-    width: 50vw;
+    width: 40vw;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: #dfdfdfdc;
+    background-color: orange;
     padding: 5%;
     color: #000;
     @media screen and (max-width: 1224px) {
@@ -192,16 +192,13 @@
     }
   }
   .canvasContainer {
-    width: 60%;
+    width: 60vw;
     height: 100%;
-    background-image: linear-gradient(to bottom, #09183a, #000);
-  }
-  .canvas {
-    background-image: linear-gradient(to bottom, #09183a, #000);
-    // background-color: orange;
-    // opacity: 0.8;
-    // width: 50vw;
-    height: 100vh;
+    background-color: #fff;
+    .canvas {
+      width: 100%;
+      height: 100vh;
+    }
   }
 }
 
