--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -155,7 +155,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: orange;
+    background-color: #fff;
     padding: 5%;
     color: #000;
     @media screen and (max-width: 1224px) {
