--- a/styles/Component.module.scss
+++ b/styles/Component.module.scss
@@ -197,7 +197,7 @@
     padding: 0%;
   }
   .miniHeading {
-    color: #1d3c3d;
+    color: #09183a;
     width: 100%;
     // height: 40%;
     font-size: 1em;
@@ -241,16 +241,30 @@
       line-height: 30px;
       font-weight: 100;
     }
+    .socialContainer {
+      display:flex;
+      justify-content: space-between;
+    }
     .lastColumn {
       overflow: hidden;
-      Image {
-        height: 20vh;
-      }
     }
+
     .footerLogo {
       width: 20%;
     }
     // background-color: #000000;
+  }
+  .imgWH {
+    // width: 80%;
+    height: 100%;
+    border-radius: 10px;
+    background-color: #e1dcca;
+    color: #1d3c3d;
+    border: transparent;
+    cursor: pointer;
+    @media screen and (max-width: 1224px) {
+      width: 100%;
+    }
   }
   .bottom {
     border-top: 1px solid #1e1e1e;
