--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -75,7 +75,7 @@
       }
       button {
         background-color: #e1dcca;
-        color: #1d3c3d;
+        color: #09183a;
         border-radius: 20px;
         border: transparent;
         width: 100%;
@@ -257,7 +257,7 @@
 }
 
 .section5 {
-  height: 40vh;
+  height: 60vh;
   width: 100%;
   background-image: linear-gradient(to bottom, #09183a, #000);
   display: flex;
@@ -271,7 +271,7 @@
   // padding: 0 5%;
   .donateText {
     height: 100%;
-    width: 50%;
+    width: 60%;
     color: #e1dcca;
     display: flex;
     flex-direction: column;
