--- a/styles/Artwork.module.scss
+++ b/styles/Artwork.module.scss
@@ -2,33 +2,52 @@
   // height: 100vh;
   width: 100vw;
   background-color: #09183a;
-  padding: 5%;
   overflow: auto;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  .artworkWrapper {
-    // background-color: #f2f2f2;
-    height: 100%;
-    width: 100%;
+  @media screen and (max-width: 1224px) {
+    z-index: -1;
+  }
+  .banner {
+    height: 20vh;
+    width: inherit;
+    background-color: #050d20;
     display: flex;
-    flex-direction: column;
-    h1 {
-      text-align: center;
+    justify-content: center;
+    align-items: flex-end;
+    //   padding: 5% 0;
+    color: #e1dcca;
+    @media screen and (max-width: 1224px) {
+      align-items: center;
     }
-    .showCase {
-      // background-color: #ffff00;
-      // height: 100vh;
-      display: grid;
-      grid-template-columns: auto auto auto auto auto;
-      column-gap: 10px;
-      row-gap: 10px;
-      .Images {
-        height: 100px;
-        width: 100px;
-        position: relative;
-        // width: 20vw;
-      }
+  }
+  .galleryContainer {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
+    column-gap: 2.5%;
+    row-gap: 1%;
+    padding: 5%;
+
+    @media screen and (max-width: 1224px) {
+      grid-template-columns: auto auto;
+      row-gap: 0.1%;
+    }
+    div {
+      height: 100%;
+      width: 100%;
+      border: 1px solid #fff;
+      border-radius: 10px;
+      transition: scale 0.3s;
+      overflow: hidden;
+      display: block;
+      cursor: pointer;
+    }
+    div:hover {
+      scale: 1.02;
     }
   }
 }
