--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -156,9 +156,10 @@
     width: 50%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     align-items: center;
+    justify-content: center;
     @media screen and (max-width: 1224px) {
+      justify-content: space-between;
       width: 100%;
       height: 50%;
       padding: 10% 0;
