--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -147,6 +147,7 @@
   display: flex;
   padding: 5%;
   background-color: #050d20;
+  z-index: 1;
   @media screen and (max-width: 1224px) {
     flex-direction: column;
     padding: 0;
