--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -24,6 +24,7 @@
   color: #e1dcca;
   background-color: #050d20;
   @media screen and (max-width: 1224px) {
+    height: 100%;
     flex-direction: column-reverse;
     padding: 0 5%;
   }
@@ -39,8 +40,14 @@
   .wRight {
     width: 45%;
     height: 100%;
-    background-color: white;
+    border-radius: 10px;
+    overflow: hidden;
     @media screen and (max-width: 1224px) {
+      width: 100%;
+      height: 100%;
+    }
+    video {
+      height: 100%;
       width: 100%;
     }
   }
@@ -178,7 +185,7 @@
       cursor: pointer;
       transition: scale 0.3s;
       @media screen and (max-width: 1224px) {
-        width: 100%;
+        width: 90%;
       }
     }
     button:hover {
