--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -199,9 +199,10 @@
     justify-content: center;
     align-items: center;
     transition: transform 1s;
-    background-color: black;
+    position: relative;
     @media screen and (max-width: 1224px) {
       width: 100%;
+      height: 100%;
     }
   }
 }
