--- a/styles/Artwork.module.scss
+++ b/styles/Artwork.module.scss
@@ -1,7 +1,7 @@
 .artworkContainer {
   // height: 100vh;
   width: 100vw;
-  background-color: #09183a;
+  background-image: linear-gradient(to bottom, #09183a, #000);
   overflow: auto;
   display: flex;
   flex-direction: column;
