--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -113,6 +113,7 @@
   overflow: hidden;
   background-size: contain;
   display: flex;
+  background-color: #e1dcca;
   @media screen and (max-width: 1224px) {
     flex-direction: column-reverse;
     height: 120vh;
@@ -124,7 +125,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: #fff;
+    background-color: #e1dcca;
     padding: 5%;
     color: #000;
     @media screen and (max-width: 1224px) {
@@ -181,7 +182,7 @@
 .section4 {
   height: 90vh;
   width: 100%;
-  background-color: #fff;
+  background-color: #e1dcca;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -202,7 +203,6 @@
     .section4Left {
       height: 100%;
       width: 50%;
-      background-color: #fff;
       color: #09183a;
       display: flex;
       flex-direction: column;
@@ -225,9 +225,11 @@
       height: 100%;
       width: 40%;
       display: grid;
-      grid-template-columns: auto auto;
+      grid-template-columns: 50% 50%;
       @media screen and (max-width: 1224px) {
         width: 100%;
+        height: 50%;
+        column-gap: 5%;
       }
     }
   }
@@ -366,6 +368,9 @@
       display: flex;
       flex-direction: column;
       overflow: hidden;
+      @media screen and (max-width: 1224px) {
+        height: 100%;
+      }
       .formInputs {
         display: flex;
         flex-direction: column;
