--- a/styles/Component.module.scss
+++ b/styles/Component.module.scss
@@ -138,7 +138,7 @@
   .line {
     height: 10%;
     background-color: #e1dcca;
-    width: 20%;
+    width: 15vw;
     margin: 1% 0;
     border-radius: 10px 0px 0px 10px;
   }
