--- a/styles/Component.module.scss
+++ b/styles/Component.module.scss
@@ -155,7 +155,7 @@
     padding: 0%;
   }
   .miniHeading {
-    color: #09183a;
+    color: #0047ab;
     width: 100%;
     // height: 40%;
     font-size: 1em;
@@ -169,6 +169,9 @@
         // font-size: 2em;
         width: 100%;
       }
+    }
+    h1 {
+      color: #0d0d0d;
     }
   }
 }
@@ -286,7 +289,7 @@
 .blogItemContainer {
   height: 20vh;
   width: 100%;
-  background-color: #e1dcca;
+  background-color: #0047ab;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -297,7 +300,7 @@
   box-shadow: 2px 2px #1d1d1d;
   .blogText {
     padding: 0 5%;
-    color: #1d1d1d;
+    color: #e1dcca;
   }
   .blogItemImage {
     height: 100%;
